feat: JDK 21 全模块迁移 — 虚拟线程 + Semaphore 限流 + ReentrantLock
- pom.xml: java.version 17 -> 21
- SmartReActAgent: 工具执行器切换虚拟线程(newVirtualThreadPerTaskExecutor),
  新增 Semaphore 限流闸门保留并发上限语义
- ThreadPoolConfig(consumer): @Async 切换虚拟线程(I/O型), Embedding保留平台线程(CPU型)
- ConversationDocumentService: synchronized -> ReentrantLock(避免虚拟线程 pin 载体线程)
- ProductKnowledgeConfig: 可选 Reranker 注入(ObjectProvider)
- mvn21.sh: Git Bash 下 Maven 包装脚本(直接 java+classworlds, 绕过 MSYS 路径bug)
- 各服务 application.yml: 配置对齐更新